--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run: |
-        $CONDA/bin/conda env update --file environment.yml --name verify
+        pip3 install -r requirements.txt
         sudo apt install iverilog gtkwave
     - name: Verify with cocotb & icarus
       run: |
